--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,6 +1,8 @@
 .emblem{
-    width: 5rem;
-    padding-right: 2rem;
+    width: 8rem;
+    height: 5rem;
+    border-radius: 0.5cm;
+    padding-right: 1rem;
 }
 
 .landingPage-heading-div{
@@ -8,6 +10,15 @@
     flex-direction: row;
     align-items: center;
     margin-top: 2rem;
+    background-color: hsl(120, 75%, 45%);
+    border-radius: 0.5cm;
+}
+h1{
+    font-weight: bold;
+    color: black;
+}
+body{
+    background-color: black;
 }
 
 .landingPage-btn, .update-btn{
@@ -17,7 +28,7 @@
     border-radius: 10px;
     outline: none !important;
     border: none !important;
-    background-color: rgb(28, 199, 28);
+    background-color: hsl(120, 75%, 45%);
     color: white;
     cursor: pointer;
     font-weight: 600;
@@ -27,6 +38,8 @@
     margin-top: 5rem;
     font-size: 2.4rem;
     width: 50%;
+    color: black;
+    color: white;
 }
 
 /* small devices */
